# craftinginterpreters

./: .gitignore  flake.nix
hlox/: LICENSE  default.nix  example.lox  hlox.cabal
hlox/app/: Main.hs
hlox/lib/: Scanner.hs
